cmake_minimum_required(VERSION 2.6)
set(TARGET Lesson01)
set(SRC Lesson01.cpp)
project (${TARGET})
set(GPUCOMPUTING_SDK_ROOT "/Developer/GPU\ Computing") 
include_directories("${GPUCOMPUTING_SDK_ROOT}/OpenCL/common/inc")
include_directories("${GPUCOMPUTING_SDK_ROOT}/shared/inc")
find_library(OCLUTIL_LIBRARY liboclUtil_i386.a "${GPUCOMPUTING_SDK_ROOT}/OpenCL/common/lib")
find_library(SHRUTIL_LIBRARY libshrUtil_i386.a "${GPUCOMPUTING_SDK_ROOT}/shared/lib")
find_library(OPENCL_LIBRARIES OpenCL ENV LD_LIBRARY_PATH)
add_executable(${TARGET} ${SRC})
target_link_libraries(${TARGET} ${OPENCL_LIBRARIES})
target_link_libraries(${TARGET} ${OCLUTIL_LIBRARY})
target_link_libraries(${TARGET} ${SHRUTIL_LIBRARY})
set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-arch i386" LINK_FLAGS "-arch i386")

