cmake_minimum_required(VERSION 2.6)
set(TARGET lesson02)
set(SRC lesson02.cpp)
project (${TARGET})
set(GPUCOMPUTING_SDK_ROOT "/Developer/GPU\ Computing") 
include_directories("${GPUCOMPUTING_SDK_ROOT}/OpenCL/common/inc")
include_directories("${GPUCOMPUTING_SDK_ROOT}/shared/inc")
find_library(OCLUTIL_LIBRARY liboclUtil_i386.a "${GPUCOMPUTING_SDK_ROOT}/OpenCL/common/lib")
find_library(SHRUTIL_LIBRARY libshrUtil_i386.a "${GPUCOMPUTING_SDK_ROOT}/shared/lib")
find_library(OPENCL_LIBRARIES OpenCL ENV LD_LIBRARY_PATH)
FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
FIND_LIBRARY(GLUT_LIBRARY GLUT )
FIND_LIBRARY( GLEW_LIBRARY
        NAMES GLEW glew
        DOC "The GLEW library")
add_executable(${TARGET} ${SRC})
target_link_libraries(${TARGET} ${OPENCL_LIBRARIES})
target_link_libraries(${TARGET} ${OCLUTIL_LIBRARY})
target_link_libraries(${TARGET} ${SHRUTIL_LIBRARY})
target_link_libraries(${TARGET} ${OpenGL_LIBRARY})
target_link_libraries(${TARGET} ${GLUT_LIBRARY})
target_link_libraries(${TARGET} ${GLEW_LIBRARY})
set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-arch i386" LINK_FLAGS "-arch i386")

